--- a/CuantoMeme2.0/templates/detalles.html
+++ b/CuantoMeme2.0/templates/detalles.html
@@ -12,17 +12,13 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Custom CSS -->
     <link href="/css-based-on-template/sb-admin.css" rel="stylesheet">
-    <link href="static/css-based-on-template/details/details.css" rel="stylesheet">
+    <link href="/css-based-on-template/details/details.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="static/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="static/css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
+	<link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	<link href="/css-based-on-template/perfil/dashboard.css" rel="stylesheet" type="text/css">
+	<link href="/css-based-on-template/perfil/perfil.css" rel="stylesheet" type="text/css">
+	
 </head>
 
 <body>
@@ -34,19 +30,42 @@
                 <a class="navbar-brand" href="index.html"></a>
                 </div>
             <!-- Top Menu Items -->
-            <ul class="nav navbar-right top-nav">
-
-
-                <li id="user-info" class="dropdown"> <a class="dropdown-toggle" data-toggle="dropdown" id="nickname"><i class="fa fa-user"></i><b class="caret"></b></a>
+             <ul class="nav navbar-right top-nav">
+             	{{#anonymous}}
+	           	<li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
                     <ul class="dropdown-menu">
-                        <li> <a><i class="fa fa-fw fa-user"></i> Profile</a> </li>
-                        <li> <a><i class="fa fa-fw fa-gear"></i> Settings</a> </li>
+                        <li>
+                            <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a>
+                        </li>
+
                         <li class="divider"></li>
-                        <li> <a id="btn-logout"><i class="fa fa-fw fa-power-off"></i> Log Out</a> </li>
+                        <li>
+                            <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a>
+                        </li>
                     </ul>
                 </li>
-                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
+                {{/anonymous}}
+                {{^anonymous}}
+           	     <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
 
+                        <li class="divider"></li>
+                        <li>
+                            
+                        </li>
+                         <li>             
+                        	<form action="/logout" method="post">
+                        		<input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" />
+							</form>
+						</li>
+                    </ul>
+                </li>
+                {{/anonymous}}
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -88,6 +107,7 @@
                                         <div class="card-block text-center">
                                             <h2>{{vineta.titulo}}</h2>
                                             <p class="card-text text-center">{{vineta.descripcion}}</p>
+                                            <p> {{#vineta.tags}} <a href="/tags/{{nombre}}">{{nombre}}</a> {{/vineta.tags}} </p>
                                         </div>
                                     </div>
                                 </div>
@@ -95,16 +115,15 @@
                                     <legend>Autor</legend>
                                     <div class="container-fluid">
                                         <div class="row">
-                                            <div class="col-md-2">
-                                                <button class="btn autor">
+                                            <div class="col-md-4">
+                                                <button class="btn autor"><a href="/perfil/{{vineta.autor.id}}">
                                                     <div id="autor" class="card text-center"> 
-                                                        <img id="avatarAutor" class="card-img-top img-responsive img-center" src="https://pbs.twimg.com/profile_images/648889317503336449/MU7PrqD_.jpg">
+                                                        <img id="avatarAutor" class="card-img-top img-responsive img-center avatar" src="{{vineta.autor.AvatarURL}}">
                                                         <div class="card-block">
                                                             <h3 class="card-title">{{vineta.autor.username}}</h3>
-                                                            <button class="btn btn-sm"><i class="fa fa-check" aria-hidden="true"></i> Le sigues</button>
                                                         </div>
                                                     </div>
-                                                </button>
+                                                </a></button>
                                             </div>
                                             <div class="col-md-8"> </div>
                                         </div>
@@ -126,12 +145,12 @@
                                     			{{vineta.likes}}
                                     		</div>
                                 		</button>
+                                	<button type="button" onclick="location.href='/dislikevineta/{{id}}'"  class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
+                                    		<div class="badge">
+                                    			{{vineta.dislikes}}
+                                    		</div>
+                                	</button>
                                 
-                                <Form action = dislikevineta/{{id}}>
-                                <button type="submit" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
-                                    <div class="badge">{{vineta.dislikes}}</div>
-                                </button>
-                                </Form>
                                     </div>
                                 </div>
                             </div>
@@ -140,9 +159,8 @@
                                 <!-- Añadir comentario -->
                                 <div class="input-group">
                                 <form action="/crearComentario/vineta/{{id}}" method=post>
-                                    <input class="form-control" placeholder="¿Qué tienes que decir?" type="text" name="comentario"> <span class="input-group-addon">
-                                        <button type="submit"><i class="glyphicon glyphicon-pencil"></i> Enviar</button>
-                                    </span> 
+                                    <input class="form-control" placeholder="¿Qué tienes que decir?" type="text" name="comentario"><input class="btn" type="submit" value="Enviar">
+                                    <input type="hidden" name="_csrf" value="{{token}}"/>           
                                 </form>
                                   </div>
                                	 <br> 
@@ -156,7 +174,7 @@
                                         <div id="comentario" class="contauner-fluid">
                                             <div class="row">
                                                 <div class="col-md-1">
-                                                    <a href="#"><img class="avatar" src="http://i2.kym-cdn.com/photos/images/facebook/000/926/994/729.gif" height="65px" width="65px"></a>
+                                                    <a href="#"><img class="avatar avatarUsuario" src="{{autor_comentario.AvatarURL}}" height="75px" width="75px"></a>
                                                 </div>
                                                 <div class="col-md-11">
                                                     <small>{{autor_comentario.username}}</small>
