--- a/CuantoMeme2.0/templates/index.html
+++ b/CuantoMeme2.0/templates/index.html
@@ -16,7 +16,9 @@
     <link href="/css-based-on-template/navbar.css" rel="stylesheet" type="text/css">
     <!-- Custom Fonts -->
     <link href="/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
+	<link href="/css-based-on-template/perfil/dashboard.css" rel="stylesheet" type="text/css">
+	<link href="/css-based-on-template/perfil/perfil.css" rel="stylesheet" type="text/css">
+	
 </head>
 
 <body>
@@ -30,7 +32,41 @@
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
-                <li> <a id="btn-login" class="btn btn-sm btn-primary"><span class="glyphicon glyphicon-user"></span> Identificate</a> </li>
+             	{{#anonymous}}
+	           	<li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Identificate <b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/login.html"><i class="fa fa-sign-in"></i> Log in </a>
+                        </li>
+
+                        <li class="divider"></li>
+                        <li>
+                            <a href="/signup.html"><i class="fa fa-sign-in"></i> Sign up</a>
+                        </li>
+                    </ul>
+                </li>
+                {{/anonymous}}
+                {{^anonymous}}
+           	     <li class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> Mi perfil<b class="caret"></b></a>
+                    <ul class="dropdown-menu">
+                        <li>
+                            <a href="/home"><i class="fa fa-fw fa-user"></i> Profile</a>
+                        </li>
+
+                        <li class="divider"></li>
+                        <li>
+                            
+                        </li>
+                         <li>             
+                        	<form action="/logout" method="post">
+                        		<input class="fa fa-fw fa-power-off" type="submit" value="Sign Out" />
+							</form>
+						</li>
+                    </ul>
+                </li>
+                {{/anonymous}}
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -38,16 +74,12 @@
                     <li> <a href="/"><i class="fa fa-home" aria-hidden="true"></i> Inicio</a> </li>
                     <li> <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-bars fa-1x" aria-hidden="true"></i> Tags populares <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
-                            <li> <a href="/tag/inglip">Inglip</a> </li>
-                            <li> <a href="/tag/yaoming">Yaoming</a> </li>
-                            <li> <a href="/tag/esgratis">Es gratis</a> </li>
-                            <li> <a href="/tag/LOL">LOL</a> </li>
-                            <li> <a href="/tag/feels">Feels</a> </li>
-                            <li> <a href="/tag/feelsbadman">Feels bad man</a> </li>
-                            <li> <a href="/tag/feelsgoodman">Feels good man</a> </li>
+                        	{{#tags_mas_usados}}
+                            <li> <a href="/tag/{{nombre}}">{{nombre}}</a> </li>
+							{{/tags_mas_usados}}
                         </ul>
                     </li>
-                    <li><a href="/perfil"><i class="fa fa-info-circle fa-1x" aria-hidden="true"></i> Perfil</a></li>
+                    <li><a href="/home"><i class="fa fa-info-circle fa-1x" aria-hidden="true"></i> Perfil</a></li>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
