--- a/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
+++ b/CuantoMeme2.0/bbdd_ejem6_mio/src/main/resources/templates/detalles.html
@@ -120,12 +120,18 @@
                                                         <div id="autor" class="card text-center"> <img id="avatarAutor" class="card-img-top img-responsive img-center avatar" src="{{vineta.autor.AvatarURL}}">
                                                             <div class="card-block">
                                                                 <h3 class="card-title">{{vineta.autor.username}}</h3>
-                                                                    <form>
-                                                                <button class="btn btn-primary"><i class="fa fa-hand-o-right"></i> Seguir</button>
-                                                                </form>
-                                                                <form>
+                                                                {{#isfollowed}}
+                                                                <form action="/dejarseguirperfil/{{vineta.autor.id}}">
                                                                 <button class="btn btn-primary"><i class="fa fa-hand-o-right"></i> Dejar de Seguir</button>
+                                                                <input type="hidden" name="_csrf" value="{{token}}" />
                                                                 </form>
+                                                                {{/isfollowed}}
+                                                                {{^isfollowed}}
+                                                                <form action="/seguirperfil/{{vineta.autor.id}}">
+                                                                <button class="btn btn-primary"><i class="fa fa-hand-o-right"></i> Seguir</button>
+                                                                    <input type="hidden" name="_csrf" value="{{token}}" />
+                                                                </form>
+                                                                {{/isfollowed}}
                                                             </div>
                                                         </div>
                                                     </a>
@@ -148,7 +154,7 @@
                                         <button id="dislikes" type="button" onclick="location.href='/dislikevineta/{{id}}'" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-thumbs-down"></i>
                                             <div class="badge"> {{vineta.dislikes}} </div>
                                         </button> {{#admin}}
-                                        <button id="delete" type="button" onclick="location.href='/eliminarcomentario/{{id}}'" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-trash"></i> </button> {{/admin}} </div>
+                                        <button id="delete" type="button" onclick="location.href='/eliminarvineta/{{id}}'" class="btn btn-danger btn-circle btn-lg"><i class="fa fa-trash"></i> </button> {{/admin}} </div>
                                 </div>
                             </div>
                             <div class="container-fluid" id="nuevo_comentario_group">
