--- a/CuantoMeme/src/app/templates/signup.template.html
+++ b/CuantoMeme/src/app/templates/signup.template.html
@@ -20,10 +20,8 @@
                             <div class="form-group">
                                 <input class="form-control" placeholder="Correo electrónico" name="email" type="email" autofocus> </div>
                             <div class="form-group">
-                                <input class="form-control" placeholder="Contraseña" name="password" type="password" value=""> </div>
-                            <div class="form-group">
-                                <input class="form-control" placeholder="Repita la contraseña" name="password-repeat" type="password" value=""> </div>
-                            <!-- Change this to a button or input when using this as a form --><a href="index.html" class="btn btn-lg btn-success btn-block">Registro</a> </fieldset>
+                                <input class="form-control" placeholder="Contraseña" name="password" type="password" (keypress)="getPassStrength()" [(ngModel)]="pass">Fuerza de la contraseña: {{fuerzaPass}} </div>
+                            <a href="index.html" class="btn btn-lg btn-success btn-block">Registro</a> </fieldset>
                     </form>
                 </div>
             </div>
