Cambio de avatar por defecto

--- a/CuantoMeme/src/app/templates/listaVinetas.template.html
+++ b/CuantoMeme/src/app/templates/listaVinetas.template.html
@@ -2,7 +2,7 @@
     <div class="jumbotron">
         <div class="user-container">
             <h3 class="lead text-center">
-                <img height="60px" src="http://steamavatars.co/?media_dl=3544" class="avatar responsive rounded-circle mx-auto d-block">
+                <img height="60px" src="../../assets/futaba.jpeg" class="avatar responsive rounded-circle mx-auto d-block">
                 <a class="enlaceUser animated bounceIn" href="#">Usuario 1</a>
             </h3>
             <hr>
