--- a/CuantoMeme/src/app/templates/detallesVineta.template.html
+++ b/CuantoMeme/src/app/templates/detallesVineta.template.html
@@ -1,1 +1,62 @@
-<h3>Detalles de la viñeta {{id}}</h3>
+<div id="body-details">
+    <h2 class="display-3 text-center">{{vineta.titulo}}</h2>
+    <h4 class="text-center lead">- Detalles -</h4>
+    <hr>
+    <!-- <button id="comentar" class="btn btn-info btn-circle"><i class="fa fa-plus fa-3" aria-hidden="true"></i></button> -->
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div id="viñeta" class="col-md-8">
+            <div class="row"> <img [src]="vineta.imgURL" class="img-responsive mx-auto d-block"> </div>
+            <p class="text-center lead">{{vineta.descripcion}}</p>
+            <div class="container text-center">
+                <button class="btn btn-warning btn-circle"> <i class="fa fa-star" aria-hidden="true"></i></button>
+                <button class="btn btn-success btn-circle" (click)="like(this)"> <i class="fa fa-thumbs-up" aria-hidden="true"></i> <span style="color:#5cb85c" class="badge">{{vineta.likes}}</span></button>
+                <button class="btn btn-danger btn-circle" (click)="dislike(this)"> <i class="fa fa-thumbs-down" aria-hidden="true"></i> <span style="color:#d9534f" class="badge">{{vineta.dislikes}}</span></button>
+            </div>
+        </div>
+        <div class="col-md-2">
+            <h3 class="lead">Autor</h3>
+            <hr>
+            <div class="usuario-info text-center"><a href="#">
+                <img class="responsive rounded-circle mx-auto d-block" width="150px" src="http://blog-imgs-89.fc2.com/p/5/j/p5jouhoukyoku/e418t.jpg" alt="Generic placeholder image">
+                <h2 class="text-center">Morgana</h2></a>
+                <button class="btn btn-info btn-seguir">Seguir</button>
+            </div>
+        </div>
+    </div>
+    <div id="comentarB" class="row">
+        <div class="container text-center">
+            <p id="comentarP">Comentar</p>
+            <hr id="comentarHR">
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="¿Qué piensas?">
+                <span class="input-group-btn">
+                    <button class="btn btn-info" type="button">Enviar</button>
+                </span>
+            </div>
+        </div>
+    </div>
+    <div class="row">
+       <div class="col-md-2"></div>
+       <div class="col-md-8">
+            <div class="media comentario">
+                <img class="d-flex mr-3 rounded-circle" src="../../assets/futaba.jpeg" height="70px" alt="Generic placeholder image">
+                <div class="media-body">
+                    <h5 class="mt-0 lead"><a href="#">Usuario_1</a></h5>
+                    <p class="comentario-body">poleeee</p>
+                    <small>2017-04-08 12:42:16.0</small>
+                </div>
+            </div>
+            <div class="media comentario">
+                <img class="d-flex mr-3 rounded-circle" src="../../assets/futaba.jpeg" height="70px" alt="Generic placeholder image">
+                <div class="media-body">
+                    <h5 class="mt-0 lead"><a href="#">Usuario_2</a></h5>
+                    <p class="comentario-body">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
+                    <small>2017-04-08 12:42:16.0</small>
+                </div>
+            </div>
+       </div>
+       <div class="col-md-2"></div>
+        
+    </div>
+    
