--- a/CuantoMeme/src/app/templates/detallesVineta.template.html
+++ b/CuantoMeme/src/app/templates/detallesVineta.template.html
@@ -1,5 +1,5 @@
 <div id="body-details">
-    <h2 class="display-3 text-center">{{vineta.titulo}}</h2>
+    <h2 class="display-3 text-center">{{vineta2.titulo}}</h2>
     <h4 class="text-center lead">- Detalles -</h4>
     <hr>
     <!-- <button id="comentar" class="btn btn-info btn-circle"><i class="fa fa-plus fa-3" aria-hidden="true"></i></button> -->
