--- a/CuantoMeme/src/app/templates/css/index.css
+++ b/CuantoMeme/src/app/templates/css/index.css
@@ -2,3 +2,15 @@
     background-color: white;
     padding-bottom: 10px;
 }
+
+.btn-circle {
+    width: 70px;
+    height: 70px;
+    padding: 10px 16px;
+    font-size: 18px;
+    line-height: 1.33;
+    border-radius: 300px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
