--- a/CuantoMeme/src/app/templates/detallesVineta.template.html
+++ b/CuantoMeme/src/app/templates/detallesVineta.template.html
@@ -19,8 +19,8 @@
             <h3 class="lead">Autor</h3>
             <hr>
             <div class="usuario-info text-center"><a href="#">
-                <img class="responsive rounded-circle mx-auto d-block" width="150px" src="http://blog-imgs-89.fc2.com/p/5/j/p5jouhoukyoku/e418t.jpg" alt="Generic placeholder image">
-                <h2 class="text-center">Morgana</h2></a>
+                <img class="responsive rounded-circle mx-auto d-block" width="150px" [src]="vineta.autor.avatarURL" alt="Generic placeholder image">
+                <h2 class="text-center">{{vineta.autor.username}}</h2></a>
                 <button class="btn btn-info btn-seguir">Seguir</button>
             </div>
         </div>
@@ -40,20 +40,13 @@
     <div class="row">
        <div class="col-md-2"></div>
        <div class="col-md-8">
-            <div class="media comentario">
-                <img class="d-flex mr-3 rounded-circle" src="../../assets/futaba.jpeg" height="70px" alt="Generic placeholder image">
-                <div class="media-body">
-                    <h5 class="mt-0 lead"><a href="#">Usuario_1</a></h5>
-                    <p class="comentario-body">poleeee</p>
-                    <small>2017-04-08 12:42:16.0</small>
-                </div>
-            </div>
-            <div class="media comentario">
-                <img class="d-flex mr-3 rounded-circle" src="../../assets/futaba.jpeg" height="70px" alt="Generic placeholder image">
-                <div class="media-body">
-                    <h5 class="mt-0 lead"><a href="#">Usuario_2</a></h5>
-                    <p class="comentario-body">Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.</p>
-                    <small>2017-04-08 12:42:16.0</small>
+            <div *ngFor="let comentario of vineta.comentarios">
+                <div class="media comentario">
+                    <img class="d-flex mr-3 rounded-circle" [src]="comentario.autor_comentario.avatarURL" height="70px" alt="Generic placeholder image">
+                    <div class="media-body">
+                        <h5 class="mt-0 lead"><a href="#">{{comentario.autor_comentario.username}}</a></h5>
+                        <p class="comentario-body">{{comentario.comentario}}</p>
+                    </div>
                 </div>
             </div>
        </div>
