--- a/CuantoMeme/src/app/templates/app.component.html
+++ b/CuantoMeme/src/app/templates/app.component.html
@@ -6,7 +6,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active"> <a class="nav-link" routerLink="/index">Inicio <span class="sr-only">(current)</span></a> </li>
-            <li class="nav-item"> <a class="nav-link" routerLink="/busqueda">Componente 2</a> </li>
+            <li class="nav-item"> <a class="nav-link" routerLink="/busqueda">Busqueda avanzada</a> </li>
             <li class="nav-item"> <a class="nav-link" routerLink="/login">Inicio de sesión</a> </li>
             <li class="nav-item"> <a class="nav-link" routerLink="/signup">Registro</a> </li>
         </ul>
