--- a/CuantoMeme/src/app/templates/css/index.css
+++ b/CuantoMeme/src/app/templates/css/index.css
@@ -1,6 +1,7 @@
 #titulo {
     background-color: white;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
+    border-bottom: 2px solid black;
 }
 
 .btn-circle {
