--- a/CuantoMeme/src/app/templates/busqueda.template.html
+++ b/CuantoMeme/src/app/templates/busqueda.template.html
@@ -19,8 +19,8 @@
 <div class="row">
     <div class="col-md-2"></div>
     <div class="col-md-8">
-        {{modo}}
-        <lista-vinetas *ngIf="cuatrocientoscuatro === false" [listaVinetas]="resultado"></lista-vinetas>
+        <div *ngIf="cuatrocientoscuatro" class="404">¡No se ha encontrado!</div>
+        <lista-vinetas [listaVinetas]="resultado"></lista-vinetas>
     </div>
     <div class="col-md-2">
         <!-- <button id="dameMas" class="btn btn-info btn-circle" (click)="masVinetas()"><i class="fa fa-plus fa-5" aria-hidden="true"></i></button> -->
