Mejorado el CSS del menú principal

--- a/CuantoMeme/src/app/templates/sidemenu.template.html
+++ b/CuantoMeme/src/app/templates/sidemenu.template.html
@@ -1,8 +1,9 @@
-<ul>
-  <li>Menu Item</li>
-  <li>Menu Item</li>
-  <li>Menu Item</li>
-  <li>Menu Item</li>
-  <li>Menu Item</li>
-  <li>Menu Item</li>
+ <h2 class="text-center">> CuantoMeme</h2>
+ <ul>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
+  <li><a href="#">Menu Item</a></li>
 </ul>
