--- a/CuantoMeme/src/app/templates/sidemenu.template.html
+++ b/CuantoMeme/src/app/templates/sidemenu.template.html
@@ -1,9 +1,13 @@
- <h2 class="text-center">> CuantoMeme</h2>
- <ul>
-  <li><a href="#">Menu Item</a></li>
-  <li><a href="#">Menu Item</a></li>
-  <li><a href="#">Menu Item</a></li>
-  <li><a href="#">Menu Item</a></li>
-  <li><a href="#">Menu Item</a></li>
-  <li><a href="#">Menu Item</a></li>
+<div *ngIf="activeUser">
+    <img [src]="activeUser.avatarURL" width="50%" class="rounded-circle img-responsive mx-auto d-block">
+    <h2 class="text-center">{{activeUser.username}}</h2>
+</div>
+<hr>
+<ul *ngIf="!activeUser">
+    <li><a routerLink="/login"><i class="fa fa-sign-in" aria-hidden="true"></i> Inicio de sesión</a></li>
+    <li><a routerLink="/signup"><i class="fa fa-pencil-square" aria-hidden="true"></i> Registro</a></li>
+</ul>
+<ul *ngIf="activeUser">
+    <li><a [routerLink]="['/perfil', activeUser.id]"><i class="fa fa-user" aria-hidden="true"></i> Perfil</a></li>
+    <li><button (click)="logOut()" class="btn-link"><i class="fa fa-sign-out" aria-hidden="true"></i> Cerrar sesión</button></li>
 </ul>
