--- a/CuantoMeme/src/app/templates/login.template.html
+++ b/CuantoMeme/src/app/templates/login.template.html
@@ -9,13 +9,15 @@
                         <form role="form">
                             <fieldset>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Correo electrónico" name="email" type="email" autofocus>
+                                    <input class="form-control" placeholder="Nombre de usuario" name="user" type="user" autofocus [(ngModel)]="username">
+                                    {{username}}
                                 </div>
                                 <div class="form-group">
-                                    <input class="form-control" placeholder="Contraseña" name="password" type="password" value="">
+                                    <input class="form-control" placeholder="Contraseña" name="password" type="password" value="" [(ngModel)]="pass">
+                                    {{pass}}
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a href="index.html" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a (click)="login()" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
                         </form>
                     </div>
