--- a/CuantoMeme/src/app/templates/login.template.html
+++ b/CuantoMeme/src/app/templates/login.template.html
@@ -17,7 +17,7 @@
                                     {{pass}}
                                 </div>
                                 <!-- Change this to a button or input when using this as a form -->
-                                <a routerLink="/" style="color:white" (click)="login()" class="btn btn-lg btn-success btn-block">Login</a>
+                                <a style="color:white" (click)="login()" class="btn btn-lg btn-success btn-block">Login</a>
                             </fieldset>
                         </form>
                     </div>
