--- a/CuantoMeme/src/app/templates/likes.template.html
+++ b/CuantoMeme/src/app/templates/likes.template.html
@@ -3,7 +3,7 @@
 <div class="row" *ngIf="userStatus">
     <div class="col-md-2"></div>
     <div class="col-md-8">
-        <lista-vinetas [listaVinetas]="loggedUser.getLikes()"></lista-vinetas>
+        <lista-vinetas [listaVinetas]="listaVinetas"></lista-vinetas>
     </div>
     <div class="col-md-2">
     </div>
