--- a/CuantoMeme/src/app/templates/indexComponent.template.html
+++ b/CuantoMeme/src/app/templates/indexComponent.template.html
@@ -6,7 +6,7 @@
         <lista-vinetas [listaVinetas]="listaVinetas"></lista-vinetas>
     </div>
     <div class="col-md-2">
-        <!-- <button id="dameMas" class="btn btn-info btn-circle" (click)="masVinetas()"><i class="fa fa-plus fa-5" aria-hidden="true"></i></button> -->
+        <button id="dameMas" class="btn btn-info btn-circle" (click)="masVinetas()"><i class="fa fa-plus fa-5" aria-hidden="true"></i></button>
     </div>
 </div>
 </div>
