--- a/CuantoMeme/src/app/templates/perfil.template.html
+++ b/CuantoMeme/src/app/templates/perfil.template.html
@@ -1,14 +1,56 @@
 <div id="body-perfil">
     <div class="row">
         <div class="col-md-3">
-            <img id="user-avatar" src="http://personacentral.com/wp-content/uploads/2016/09/Futaba-Avatar-1.jpg" width="auto" class="rounded img-fluid mx-auto d-block">
-            <h1 class="display-4 text-center">Admin</h1>
-            <p class="lead text-center"><i class="fa fa-envelope" aria-hidden="true"></i> Email: admin@cuentomeme.es</p>
-            <p class="lead text-center"><i class="fa fa-users" aria-hidden="true"></i> Rol: Administador</p>
+            <img id="user-avatar" [src]="avatar" width="300px" class="rounded img-fluid mx-auto d-block">
+            <h1 class="display-4 text-center">{{username}}</h1>
+            <p class="lead text-center"><i class="fa fa-envelope" aria-hidden="true"></i> Email: {{email}}</p>
+            <div *ngIf="!propio">
+                <button class="btn btn-block btn-info follow">Seguir</button>
+            </div>
             <hr>
-            <button class="btn btn-success text-center">likes</button>
         </div>
         <div class="col-md-9">
+            <div class="btn-group" role="group" aria-label="aaa">
+              <button type="button" [ngClass]="{'active': opcion == 'publicadas'}" (click)="eleccion('publicadas')"  class="btn btn-lg btn-link">Publicadas</button>
+              <button type="button" [ngClass]="{'active': opcion == 'timeline'}" (click)="eleccion('timeline')"  class="btn btn-lg btn-link active">Timeline</button>
+              <div *ngIf="propio">
+              <button type="button" [ngClass]="{'active': opcion == 'publicar'}" (click)="eleccion('publicar')"  class="btn btn-lg btn-link">Publicar viñeta</button>
+              <button type="button" [ngClass]="{'active': opcion == 'modificar'}" (click)="eleccion('modificar')"  class="btn btn-lg btn-link">Modificar perfil</button>
+              </div>
+              <button type="button" [ngClass]="{'active': opcion == 'seguidos'}" (click)="eleccion('seguidos')"  class="btn btn-lg btn-link">Seguidos</button>
+            </div>
+            <hr>
+            <div *ngIf="opcion == 'publicadas'">
+                <lista-vinetas [listaVinetas]="subidas"></lista-vinetas>
+            </div>
+            <div *ngIf="opcion == 'modificar'">
+                //
+            </div>
+            <div *ngIf="opcion == 'publicar'">
+               <div class="col-md-7">
+                    <form>
+                        <div class="form-group">
+                            <label for="tituloinput">Título</label>
+                            <input type="text" class="form-control" id="tituloinput" aria-describedby="emailHelp" placeholder="Ponle título" name="titulo">
+                        </div>
+                        <div class="form-group">
+                            <label for="descinput">Descripción</label>
+                            <input type="text" class="form-control" id="descinput" aria-describedby="emailHelp" placeholder="Dale una descripción corta" name="desc">
+                        </div>
+                        <div class="form-group">
+                            <label for="imageninput">Imagen</label>
+                            <input type="file" class="form-control" id="imageninput" name="file" (change)="fileChange($event)">
+                            <small>¡No más de 1mb!</small>
+                        </div>
+                        <div class="form-group">
+                            <label for="taginput">Tag</label>
+                            <input type="text" class="form-control" id="descinput" aria-describedby="emailHelp" placeholder="Dale un tag" name="tag">
+                            <small>Solo uno. Los espacios se borrarán.</small>
+                        </div>
+                        <button class="btn btn-info" type="button">¡Enviar!</button>
+                    </form>
+               </div>
+            </div>
         </div>
     </div>
 </div>
